--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,11 @@ body {
    
       color: #e8e6e6;
       transition: all 1s ease;
+
+      h2{
+         border-color: white;
+      }
+
    
    }
    
