--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -228,3 +228,20 @@
 //     cursor: url('arrow-right.svg'), auto;	
 //     transform-origin: center;
 //  }
+
+@media screen and (max-width: 720px) {
+    .text-section {
+        grid-column: 1/13 !important;
+
+        ul {
+            li {
+                list-style-position: inside;
+            }
+        }
+    }
+
+    .image-section {
+        display: block;
+        grid-column: 1/13 !important;
+    }
+}
