--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -115,6 +115,10 @@
                width: 100%;
            }
 
+           video{
+            width: 50vw;
+           }
+
        }
 
     //    .deep-sea-bots {
