--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -13,8 +13,10 @@
         overflow: hidden;
         // min-height: 100%;
         height: 50vh;
-
+        width: 50vw;
+        
     }
+    
 
 
     .postcover {
