without videoFile in blog-post

--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -408,11 +408,13 @@
    }
 
    @media screen and (min-width: 720px) {
-    .deep-sea-bots  {
-        .postcover{
-            .cover-image{
-                // padding-top: 25rem;
-
+    .space{
+        .deep-sea-bots  {
+            .postcover{
+                .cover-image{
+                    padding-top: 25rem;
+    
+                }
             }
         }
     }
