without videoFile in blog-post, work-post, space-post, work, space, index

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -153,11 +153,14 @@
         }
 
         em {
-            display: flex;
-            justify-content: center;
-            line-height: 2.5rem;
-            text-align: center;
+            // display: flex;
+            // justify-content: center;
         }
+    }
+    
+    blockquote, q{
+        line-height: 2.5rem;
+        text-align: center;
     }
 
     ul {
