--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,4 +29,26 @@
 
 }
 
+@media screen and (max-width: 720px) {
+
+    .vibes-swiper{
+        // height: 60vh;
+        
+        .swiper{
+            height: 100%;
+            // height: 60vh;
+            .swiper-slide{
+                justify-content: center;
+                
+                img, video{
+                    // height:max-content;
+                    height: 70vh;
+
+                }
+            }
+
+        }
+
+    }
+}
 
