--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -7,6 +7,21 @@
     // width: 50vw;
     // background-color: black;
 
+    &:hover {
+        .project-description {
+            h1{
+               color: rgb(254, 214, 54) ;
+            }
+        }
+
+        .cover-image{
+            img, video{
+                transform: scale(1.05);
+            }
+        }
+    }
+
+    
     .project-preview {
         // height: fit-content;
         display: block;
@@ -16,7 +31,6 @@
         width: 50vw;
         
     }
-    
 
 
     .postcover {
@@ -47,8 +61,9 @@
             font-size: 1.5rem;
             font-family: Kleukens;
 
-            color: white;
-            border-color: white;
+            background-color: rgb(254, 214, 54);
+            color: black;
+            border-color: black;
             border-style: solid;
             border-width: 1px;
 
@@ -84,6 +99,7 @@
 
             // width: 100%;
             border-radius: 0rem;
+            transition: all 0.5s ease;
         }
 
     }
@@ -100,7 +116,7 @@
             // left: 12.5%;
             font-family: Kleukens;
 
-            font-size: 3rem;
+            // font-size: 3rem;
             font-size: 1.75rem;
             line-height: 2.15rem;
 
@@ -112,6 +128,7 @@
             // line-height: 4.5rem;
 
             color: white;
+            transition: all 0.5s ease;
 
             // padding: 0rem 0.5rem;
             // border-style: solid;
@@ -189,6 +206,7 @@
             font-size: 1.5rem;
             font-family: Kleukens;
             text-align: left;
+            background-color: rgb(254, 214, 54);
 
             // color: white;
             // border-color: white;
@@ -294,7 +312,8 @@
             }
 
             .type{
-                grid-column: 10/13;
+                grid-column: 6/13;
+                margin-left: auto;
             }
 
             .collaborators{
@@ -310,6 +329,10 @@
 
             .description {
                 grid-column: 1/12;
+            }
+
+            .grid{
+                display: block;
             }
         }
     }
