--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,7 +26,8 @@ body {
       transition: all 1s ease;
 
       h2{
-         border-color: white;
+         // border-color: white;
+         color: #000000;
       }
 
    
