--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -4,6 +4,7 @@
     margin-top: 2rem;
     // min-height: 100vh;
     padding: 1rem;
+    padding-top: 4rem;
     border-radius: 1rem;
 
     display: grid;
@@ -11,7 +12,9 @@
     gap: 1rem;
 
     div {
-        grid-column: 4/11;
+        grid-column: 4/12;
+        margin-bottom: 10vh;
+
     }
 
     h1, h2{
@@ -20,16 +23,60 @@
     }
 
     .description{
-        font-family: Kleukens;
-        font-size: 1.5rem;
-        line-height: 1.8rem;
-        margin-bottom: 10vh;
+        // font-family: Kleukens;
+        font-size: 3rem;
+        line-height: 3.5rem;
+
     }
 
-    p, li{
+
+    li {
+        list-style-type: circle;
+        margin: 1rem 0rem;
+        
+    }
+
+    p {
         font-family: Kleukens;
+        // font-family: Helvetica, sans-serif;
         font-size: 1.5rem;
-        line-height: 1.8rem;   
+        line-height: 1.8rem;
+        font-weight: 300;
+
+        margin-bottom: 1rem;
+
+        strong {
+            font-weight: bold;
+        }
+
+        em {
+            // display: flex;
+            // justify-content: center;
+        }
+    }
+    
+    blockquote, q{
+        line-height: 2.5rem;
+        text-align: center;
+    }
+
+    ul {
+        font-size: 1.5rem;
+        line-height: 2rem;
+
+        li {
+            list-style-type: circle;
+            margin: 0rem 0rem;
+        }
+    }
+
+    a {
+        color: grey;
+        font-size: 1.4rem;
+        // text-decoration: underline;
+        background-color: rgb(117, 117, 117, 0.3);
+        padding: 0rem 0.4rem;
+        border-radius: 1rem;
     }
 
 }
