--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -196,10 +196,22 @@
         .cover-image {
             grid-column: span 2;
 
+            // .image-content{
+            //     .video-section{
+            //         video{
+            //             // width: 20vw;
+            //             object-fit: cover;
+            //         }
+
+            //     }
+            // }
+
             img,
             video {
-                width: min-content;
-                height: 100%;
+                // width: fit-content;
+                // height: 100%;
+                width: 100%;
+                // height: 15vh;
                 border-radius: 1rem;
             }
 
@@ -381,6 +393,8 @@
                 h1{
                     word-break: break-word;
                     width: 100%;
+                    font-size: 4rem;
+                    line-height: 4rem;
                 }
 
             }
