--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -12,28 +12,30 @@
     gap: 1rem;
 
     div {
-        grid-column: 4/12;
-        margin-bottom: 10vh;
-
+        margin-bottom: 7vh;
     }
 
-    h1, h2{
-        grid-column: 1/3;
+    // .html-content{
+    //     grid-column: 4/11;
 
-    }
+    // }
 
-    .description{
+    // h1, h2{
+    //     grid-column: 1/3;
+
+    // }
+
+    .description {
         // font-family: Kleukens;
-        font-size: 3rem;
-        line-height: 3.5rem;
-
+        // grid-column: 4/12;
+        margin-bottom: 0rem;
     }
 
 
     li {
         list-style-type: circle;
         margin: 1rem 0rem;
-        
+
     }
 
     p {
@@ -54,8 +56,9 @@
             // justify-content: center;
         }
     }
-    
-    blockquote, q{
+
+    blockquote,
+    q {
         line-height: 2.5rem;
         text-align: center;
     }
@@ -71,13 +74,69 @@
     }
 
     a {
-        color: grey;
-        font-size: 1.4rem;
+        color: rgb(0, 0, 0);
         // text-decoration: underline;
-        background-color: rgb(117, 117, 117, 0.3);
-        padding: 0rem 0.4rem;
-        border-radius: 1rem;
+        background-color: rgb(149, 158, 255);
+        padding: 0.3rem 1rem;
+        border-radius: 3rem;
     }
 
 }
 
+@media screen and (min-width: 720px) {
+    .about-page {
+
+        .html-content {
+            grid-column: 4/11;
+        }
+
+        .description {
+            grid-column: 4/11;
+
+            p {
+                font-size: 3rem;
+                line-height: 3.5rem;
+            }
+        }
+
+        h1,
+        h2 {
+            grid-column: 1/3;
+        }
+
+        a {
+            font-size: 3rem;
+            line-height: 3.5rem;
+        }
+    }
+
+}
+
+@media screen and (max-width: 720px) {
+    .about-page {
+
+        .html-content,
+        .description {
+            grid-column: 3/13;
+        }
+
+        h1,
+        h2 {
+            grid-column: 1/2;
+        }
+
+
+        .description {
+            p {
+                font-size: 2.5rem;
+                line-height: 3rem;
+            }
+        }
+
+        a {
+            font-size: 2.5rem;
+            line-height: 3.5rem;
+        }
+    }
+
+}
