--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -7,6 +7,20 @@
     word-wrap: break-word;
     // justify-content: center;
 
+    .image-content{
+        display: flex;
+        justify-content: center;
+
+        .video-section{
+            // flex-basis: 32.8%;
+
+            video{
+                // max-width: 100%;
+                max-height:80vh;
+            }
+        }
+    }
+
     .grid {
 
         display: flex;
