--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -17,6 +17,7 @@
             video{
                 // max-width: 100%;
                 max-height:80vh;
+                object-fit: cover;
             }
         }
     }
@@ -31,20 +32,27 @@
         gap: 1rem;
 
         .image {
-            flex-basis: 32.8%;
+            // flex-basis: 32.8%;
+            width: 100%;
 
             img {
                 // height: 80vh;
                 width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
 
         .video-section{
             // flex-basis: 32.8%;
-
+            width: 100%;
+            
             video{
-                max-width: 100%;
-                max-height:max-content;
+                // max-width: 100%;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                // max-height:max-content;
             }
         }
 
