--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -58,7 +58,7 @@ body {
    .work, .work-post, .blog, .blog-post, .space, .space-post{
       // background-image: linear-gradient(#6f6f6f00, #6f6f6f00);
       
-      h1, h3, p{
+      h1, h3, p, li{
          color: #4bbaff;
          transition: all 0.5s ease;
          
