--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -8,14 +8,14 @@
     // justify-content: center;
 
     .image-content{
-        display: flex;
-        justify-content: center;
-
+        
         .video-section{
+            // display: flex;
+            // justify-content: center;
             // flex-basis: 32.8%;
 
             video{
-                // max-width: 100%;
+                width: 100%;
                 max-height:80vh;
                 object-fit: cover;
             }
