--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -7,7 +7,7 @@
     word-wrap: break-word;
     // justify-content: center;
 
-    .image-content{
+    .block{
         
         .video-section{
             // display: flex;
