--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -133,17 +133,11 @@
 }
 
 .text-section {
-    // margin-bottom: 3.5rem;
     height: 100%;
-    margin: 4.5rem 0rem;
+    margin-bottom: 4.5rem ;
 
     font-family: Kleukens;
     word-wrap: break-word;
-
-    // display: flex;
-    // flex: 1 1 0;
-
-    // gap: 1rem;
 
     div {
         flex-basis: 100%;
