--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -9,13 +9,15 @@
 
     .block{
         
+        .image, .video-section, .website{
+            margin-bottom: 4.5rem;
+
+        }
+
         .video-section{
-            // display: flex;
-            // justify-content: center;
-            // flex-basis: 32.8%;
 
             video{
-                width: 100%;
+                // width: 100%;
                 max-height:80vh;
                 object-fit: cover;
             }
@@ -149,7 +151,7 @@
 
     h2 {
         margin-bottom: 1.5rem;
-        font-size: 1.8rem;
+        font-size: 1rem;
         font-weight: bold;
     }
 
