--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -25,7 +25,7 @@ body {
       color: #e8e6e6;
       transition: all 0.5s ease;
 
-      h2{
+      h2.type, h2.year{
          // border-color: white;
          color: #000000;
       }
@@ -58,7 +58,7 @@ body {
    .work, .work-post, .blog, .blog-post, .space, .space-post{
       // background-image: linear-gradient(#6f6f6f00, #6f6f6f00);
       
-      h1, h3, p, li{
+      h1, h2, h3, p, li{
          color: #4bbaff;
          transition: all 0.5s ease;
          
