--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -188,6 +188,8 @@
 
         li {
             list-style-type: circle;
+            list-style-position: inside;
+
             margin: 1rem 0rem;
         }
     }
