--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -1,7 +1,7 @@
 .image-section {
     // margin-bottom: 3.5rem;
     height: 100%;
-    // margin-bottom: 4.5rem;
+    margin-bottom: 4.5rem;
 
     font-family: Kleukens;
     word-wrap: break-word;
@@ -135,7 +135,7 @@
 }
 
 .text-section {
-    height: 100%;
+    // height: 100%;
     margin-bottom: 4.5rem ;
 
     font-family: Kleukens;
