--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,7 @@
         width: 100%;
         overflow: hidden;
         grid-column: span 2;
-        background-color: black;
+        // background-color: black;
 
        }
  
