--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -13,11 +13,25 @@
         .video-section,
         .website {
             margin-bottom: 4.5rem;
+        }
 
+        .image {
+            // flex-basis: 32.8%;
+            width: fit-content;
+            // height: 100%;
+            margin-left: auto;
+            margin-right: auto;
+
+            img {
+                // height: 80vh;
+                // width: auto;
+                max-height: 60vh;
+                object-fit: contain;
+                overflow: visible;
+            }
         }
 
         .video-section {
-
             video {
                 // width: 100%;
                 max-height: 80vh;
@@ -43,8 +57,8 @@
             img {
                 // height: 80vh;
                 // width: auto;
-                height: 100%;
-                object-fit: contain;
+                // height: 100%;
+                // object-fit: contain;
                 overflow: visible;
             }
         }
@@ -116,10 +130,10 @@
         max-height: 90vh;
     }
 
-    img {
-        // height: 80vh;
-        width: 100%;
-    }
+    // img {
+    //     // height: 80vh;
+    //     width: 100%;
+    // }
 
     .website {
         width: 100%;
@@ -170,6 +184,7 @@
         font-size: 1.5rem;
         line-height: 2rem;
         margin-bottom: 1rem;
+        // white-space: pre;
 
         strong {
             font-weight: bold;
@@ -252,9 +267,31 @@
     }
 }
 
+.blog-swiper{
+    height: 60vh;
+    width: 100%;
+    overflow: hidden;
+
+    .swiper-slide {
+        // width:fit-content;
+        width: auto;
+        height: 100%;
+
+        img,
+        video {
+            // width: min-content;
+            max-height: 60vh;
+            // height: max-content;
+            border-radius: 0rem;
+            display: inline;
+        }
+
+    }
+}
+
 .swiper-img {
-    object-fit: contain;
-    height: 100%;
+    // object-fit: contain;
+    // height: 100%;
 }
 
 .swiper-buttons {
