--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -69,6 +69,7 @@
 
         li {
             list-style-type: circle;
+            list-style-position: inside;
             margin: 0rem 0rem;
         }
     }
@@ -117,7 +118,7 @@
 
         .html-content,
         .description {
-            grid-column: 3/13;
+            grid-column: 2/13;
         }
 
         h1,
@@ -134,7 +135,7 @@
         }
 
         a {
-            font-size: 2.5rem;
+            font-size: 2rem;
             line-height: 3.5rem;
         }
     }
